--- a/demos/moderation/src/components/Tabs.css
+++ b/demos/moderation/src/components/Tabs.css
@@ -11,11 +11,6 @@
   border-bottom: 1px solid var(--border);
 }
 
-.Tabs__content {
-  display: grid;
-  min-height: 160px;
-}
-
 .Tab__title {
   cursor: pointer;
   appearance: button;
